--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
   <body class="h-screen bg-lightBlue">
     <div class="relative h-full">
       <div
-        class="absolute h-3/5 w-10/11 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 justify-between p-2 bg-white rounded-md grid grid-cols-3 gap-4"
+        class="absolute md:h-3/5 w-10/11 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 justify-between p-2 bg-white rounded-md grid grid-cols-1 md:grid-cols-3 gap-4"
       >
         <!-- Sidebar start -->
+         
         <aside
-          class="bg-[url('/assets/images/bg-sidebar-desktop.svg')] col-span-1 bg-cover bg-center p-4 flex flex-col rounded-md justify-start text-white"
+          class="bg-[url('/assets/images/bg-sidebar-mobile.svg')] md:bg-[url('/assets/images/bg-sidebar-desktop.svg')] md:col-span-1 bg-cover bg-center 
+          p-4 flex md:flex-col rounded-md space-x-3 md:space-x-0 justify-center md:justify-start text-white"
         >
           <div class="step flex justify-start items-center">
             <span
               class="step-num border-2 h-6 w-6 border-white flex justify-center p-1 box-border rounded-full text-xs font-medium"
               >1</span
             >
-            <div class="ml-2">
-              <span class="step-info text-xs text-coolGray font-bold"
+            <div class="ml-2 hidden md:block">
+              <span class="step-info text-xs text-lightGray font-bold"
                 >Step 1</span
               >
               <h3 class="text-xs font-semibold">Your info</h3>
@@ -52,8 +54,8 @@
               class="step-num border-2 h-6 w-6 border-white flex justify-center p-1 box-border rounded-full text-xs font-medium"
               >2</span
             >
-            <div class="ml-2">
-              <span class="step-info text-xs text-coolGray font-bold"
+            <div class="ml-2 hidden md:block">
+              <span class="step-info text-xs text-lightGray font-bold"
                 >Step 2</span
               >
               <h3 class="text-xs font-semibold">Select plan</h3>
@@ -65,8 +67,8 @@
               class="step-num border-2 h-6 w-6 border-white flex justify-center p-1 box-border rounded-full text-xs font-medium"
               >3</span
             >
-            <div class="ml-2">
-              <span class="step-info text-xs text-coolGray font-bold"
+            <div class="ml-2 hidden md:block">
+              <span class="step-info text-xs text-lightGray font-bold"
                 >Step 3</span
               >
               <h3 class="text-xs font-semibold">Add-ons</h3>
@@ -78,8 +80,8 @@
               class="step-num border-2 h-6 w-6 border-white flex justify-center p-1 box-border rounded-full text-xs font-medium"
               >4</span
             >
-            <div class="ml-2">
-              <span class="step-info text-xs text-coolGray font-bold"
+            <div class="ml-2 hidden md:block">
+              <span class="step-info text-xs text-lightGray font-bold"
                 >Step 4</span
               >
               <h3 class="text-xs font-semibold">Summary</h3>
